#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([asm71], [2.0.2], [bug400@gmx.de])
AM_INIT_AUTOMAKE
LT_INIT(disable_shared)
AC_CONFIG_SRCDIR([src/asm71.pas])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile
                 man/Makefile
                 examples/Makefile
                 doc/Makefile
                 src/Makefile])


AC_OUTPUT
